--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.128.0",
     "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
     "uvicorn>=0.40.0",
 ]
